src/test/ui/stability-attribute/stability-attribute-sanity-4.stderr
error: malformed `unstable` attribute input
  --> $DIR/stability-attribute-sanity-4.rs:8:5
   |
LL |     #[unstable]
   |     ^^^^^^^^^^^ help: must be of the form: `#[unstable(feature = "name", reason = "...", issue = "N")]`

error: malformed `unstable` attribute input
  --> $DIR/stability-attribute-sanity-4.rs:11:5
   |
LL |     #[unstable = "b"]
   |     ^^^^^^^^^^^^^^^^^ help: must be of the form: `#[unstable(feature = "name", reason = "...", issue = "N")]`

error: malformed `stable` attribute input
  --> $DIR/stability-attribute-sanity-4.rs:14:5
   |
LL |     #[stable]
   |     ^^^^^^^^^ help: must be of the form: `#[stable(feature = "name", since = "version")]`

error: malformed `stable` attribute input
  --> $DIR/stability-attribute-sanity-4.rs:17:5
   |
LL |     #[stable = "a"]
   |     ^^^^^^^^^^^^^^^ help: must be of the form: `#[stable(feature = "name", since = "version")]`

error[E0542]: missing 'since'
  --> $DIR/stability-attribute-sanity-4.rs:21:5
   |
LL |     #[deprecated]
   |     ^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/stability-attribute-sanity-4.rs:25:5
   |
LL |     #[deprecated = "a"]
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0542`.
